<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="show_bar_graph">View as Bar</string>
    <string name="show_line_graph">View as Line</string>
    <string name="show_table_graph">View as Table</string>
    <string name="show_table_value">View as Value</string>
    <string name="show_radar_graph">Show as Radar</string>
    <string name="show_pie_value">View as Pie</string>
    <string name="action_accept">Accept</string>
    <string name="period">Period</string>
    <string name="orgUnit">OrgUnit</string>
    <string name="none">None</string>
    <string name="daily">Daily</string>
    <string name="today">Today</string>
    <string name="other">Other</string>
    <string name="yesterday">Yesterday</string>
    <string name="last3Days">Last 3 Days</string>
    <string name="last7Days">Last 7 Days</string>
    <string name="last14Days">Last 14 Days</string>
    <string name="last30Days">Last 30 Days</string>
    <string name="thisweek">This Week</string>
    <string name="lastweek">Last Week</string>
    <string name="last4weeks">Last 4 Weeks</string>
    <string name="last12weeks">Last 12 Weeks</string>
    <string name="thismonth">This Month</string>
    <string name="lastmonth">Last Month</string>
    <string name="last3months">Last 3 Months</string>
    <string name="last6months">Last 6 Months</string>
    <string name="last12months">Last 12 Months</string>
    <string name="monthsthisyear">Months This Year</string>
    <string name="thisquarter">This Quarter</string>
    <string name="lastquarter">Last Quarter</string>
    <string name="last4quarters">Last 4 Quarters</string>
    <string name="quartersthisyear">Quarter This Year</string>
    <string name="thisyear">This Year</string>
    <string name="lastyear">Last Year</string>
    <string name="last5years">Last 5 Years</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="all">All</string>
    <string name="selection">Selection</string>
    <string name="reset">Reset</string>
    <string name="include_this_period_title">Do you want to include the current period?</string>
    <string name="include_this_period_body">It will display the current period in the chart.</string>
    <string name="no_data_for_selected_filters">The filters you applied do not return any data</string>
    <string name="no_data_to_display">You do not have any data to be displayed</string>
    <string name="visualization_error">Something is wrong with this visualization</string>
    <string name="visualization_failure">Something is wrong with the visualizations</string>
    <string name="visualization_groups_failure">Something is wrong with the visualization groups</string>
    <string name="pie_chart_no_data">All data is zero</string>
    <string name="error_invalid_arguments">This visualization is not well configured, please contact your admin.</string>
    <string name="error_invalid_category">You don\'t have access to category %s</string>
    <string name="error_invalid_category_option">You don\'t have access to category option %s</string>
    <string name="error_invalid_data_element">You don\'t have access to data element %s</string>
    <string name="error_invalid_data_element_operand">You don\'t have access to data element operand %s</string>
    <string name="error_invalid_indicator">You don\'t have access to indicator %s</string>
    <string name="error_invalid_org_unit">You don\'t have access to organisation unit %s</string>
    <string name="error_invalid_org_unit_group">You don\'t have access to organisation unit group %s</string>
    <string name="error_invalid_org_unit_level">You don\'t have access to organisation unit level %s</string>
    <string name="error_invalid_program_indicator">You don\'t have access to program indicator %s</string>
    <string name="error_invalid_visualization">The visualization %s is missing</string>
    <string name="error_parsing_visualization">This visualization is not well configured, please contact your admin.</string>
    <string name="error_invalid_custom_boundaries">Custom boundaries are not supported for program indicator %s</string>
    <string name="error_database">Can\'t access database. Please contact your administrator.</string>
    <string name="error_invalid_program">You do not have access to program %s</string>
    <string name="error_invalid_attribute">You do not have access to attribute %s</string>
    <string name="error_unsupported_aggregation_type">Unsupported aggregation type %s</string>
    <string name="line_listing_max_results">Table limited to %1$s entries. Filter to refine results.</string>
</resources>