<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/back_weekly"
            android:icon="@drawable/ic_arrowback_chart"
            android:title="@string/weekly"/>
    </group>
    <group>
        <item
            android:id="@+id/thisweek"
            android:icon="@drawable/ic_check_chart_white"
            android:title="@string/thisweek" />
        <item
            android:id="@+id/lastweek"
            android:icon="@drawable/ic_check_chart_white"
            android:title="@string/lastweek" />
        <item
            android:id="@+id/last4weeks"
            android:icon="@drawable/ic_check_chart_white"
            android:title="@string/last4weeks" />
        <item
            android:id="@+id/last12weeks"
            android:icon="@drawable/ic_check_chart_white"
            android:title="@string/last12weeks" />
    </group>
</menu>