<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android">
        <group>
            <item
                android:id="@+id/back"
                android:icon="@drawable/ic_arrowback_chart"
                android:title="@string/orgUnit"/>
        </group>
        <group>
            <item
                android:id="@+id/all"
                android:icon="@drawable/ic_check_chart_white"
                android:title="@string/all" />
            <item
                android:id="@+id/selection"
                android:icon="@drawable/ic_check_chart_white"
                android:title="@string/selection" />
        </group>

        <group>
            <item
                android:visible="false"
                android:icon="@drawable/ic_reset_chart"
                android:id="@+id/reset_orgunit"
                android:title="@string/reset" />
        </group>
    </menu>