<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="dhis2.org.analytics.charts.data.ChartType" />

        <import type="android.view.View" />

        <variable
            name="chartModel"
            type="dhis2.org.analytics.charts.ui.ChartModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/titleContainer"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/chart_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:iconResource="@{chartModel.observableChartType.iconResource}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_line_chart"/>

            <TextView
                android:id="@+id/chart_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{chartModel.graph.title}"
                android:textColor="@color/textPrimary"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/chartFilters"
                app:layout_constraintStart_toEndOf="@id/chart_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="Chart title" />

            <ImageView
                android:id="@+id/chartFilters"
                style="@style/ActionIconNoPadding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:onClick="@{(view)->chartModel.showFilters(view)}"
                app:filter_visualization="@{chartModel}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/resetDimensions"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_visualization_filter"
                app:tint="?colorPrimary" />

            <ImageButton
                android:id="@+id/resetDimensions"
                style="@style/ActionIconNoPadding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@id/chart_title"
                app:layout_constraintEnd_toStartOf="@id/chartVisualizationButton"
                app:layout_constraintTop_toTopOf="@id/chart_title"
                app:srcCompat="@drawable/ic_restart_alt"
                app:tint="@color/text_black_333"
                android:visibility="gone"/>

            <ImageButton
                android:id="@+id/chartVisualizationButton"
                style="@style/ActionIconNoPadding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(view)->chartModel.showVisualizationOptions(view)}"
                app:layout_constraintBottom_toBottomOf="@id/chart_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/chart_title"
                app:srcCompat="@drawable/ic_more"
                app:tint="@color/text_black_333" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/chart_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:visibility="@{chartModel.hideChart() ? View.GONE : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleContainer" />

        <androidx.compose.ui.platform.ComposeView
            android:id="@+id/compose_chart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleContainer" />

        <ImageView
            android:id="@+id/no_data_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:visibility="@{chartModel.displayNoData() ? View.VISIBLE:View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleContainer"
            app:srcCompat="@drawable/ic_empty_folder" />

        <ImageView
            android:id="@+id/error_data_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="70dp"
            android:visibility="@{chartModel.displayErrorData() ? View.VISIBLE : View.GONE}"
            app:iconResource="@{chartModel.observableChartType.iconResource}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleContainer"
            app:tint="@color/visualization_error_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:paddingStart="52dp"
            android:paddingEnd="52dp"
            android:text="@string/no_data_for_selected_filters"
            android:textColor="@color/textSecondary"
            android:textSize="17sp"
            android:visibility="@{chartModel.showNoDataForFiltersMessage() ? View.VISIBLE : View.GONE}"
            app:clipAllCorners="@{8}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/no_data_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:paddingStart="52dp"
            android:paddingEnd="52dp"
            android:text="@string/no_data_to_display"
            android:textColor="@color/textSecondary"
            android:textSize="17sp"
            android:visibility="@{chartModel.showNoDataMessage() ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/no_data_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:paddingStart="52dp"
            android:paddingEnd="52dp"
            android:text="@{chartModel.graph.errorMessage}"
            android:textColor="@color/textSecondary"
            android:textSize="17sp"
            android:visibility="@{chartModel.showError() ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_data_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:gravity="center"
            android:paddingHorizontal="52dp"
            android:text="@string/pie_chart_no_data"
            android:textColor="@color/textSecondary"
            android:textSize="17sp"
            android:visibility="@{chartModel.pieChartDataIsZero() ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_data_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>